--- a/project-euler/part-one.ipynb
+++ b/project-euler/part-one.ipynb
@@ -550,7 +550,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "playground",
    "language": "python",
    "name": "python3"
   },
@@ -564,7 +564,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.10.5 | packaged by conda-forge | (main, Jun 14 2022, 07:05:37) [Clang 13.0.1 ]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1b6258ac5f9ce9aee8bc7e8f09e746bac739d42425ff8343fe5df569d2e6cb19"
+   }
   }
  },
  "nbformat": 4,
