Add .gitattributes to `level-based-segments`

--- a/level-based-segments/development.ipynb
+++ b/level-based-segments/development.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('persona.csv')"
+    "df = pd.read_csv('data/persona.csv')"
    ]
   },
   {
