Format & Sort & Lint

--- a/diamonds/model.ipynb
+++ b/diamonds/model.ipynb
@@ -220,7 +220,7 @@
     }
    ],
    "source": [
-    "df.info()\n"
+    "df.info()"
    ]
   },
   {
@@ -389,9 +389,9 @@
    "outputs": [],
    "source": [
     "# We should delete rows where x, y, z are 0.\n",
-    "df = df.drop(df[df[\"x\"]==0].index)\n",
-    "df = df.drop(df[df[\"y\"]==0].index)\n",
-    "df = df.drop(df[df[\"y\"]==0].index)"
+    "df = df.drop(df[df[\"x\"] == 0].index)\n",
+    "df = df.drop(df[df[\"y\"] == 0].index)\n",
+    "df = df.drop(df[df[\"y\"] == 0].index)"
    ]
   },
   {
@@ -458,8 +458,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(df[(df[\"carat\"]<2) & (df[\"z\"]>20)].index)\n",
-    "df = df.drop(df[(df[\"carat\"]>0) & (df[\"y\"]>20)].index)"
+    "df = df.drop(df[(df[\"carat\"] < 2) & (df[\"z\"] > 20)].index)\n",
+    "df = df.drop(df[(df[\"carat\"] > 0) & (df[\"y\"] > 20)].index)"
    ]
   },
   {
@@ -499,7 +499,7 @@
     }
    ],
    "source": [
-    "sns.regplot(x=\"price\", y=\"z\", data=df, fit_reg=True, line_kws={\"color\":\"#F6FF33\"})\n",
+    "sns.regplot(x=\"price\", y=\"z\", data=df, fit_reg=True, line_kws={\"color\": \"#F6FF33\"})\n",
     "plt.title(\"Regression line on Price vs. z\")\n",
     "plt.show();"
    ]
@@ -521,7 +521,7 @@
     }
    ],
    "source": [
-    "sns.regplot(x=\"price\", y=\"y\", data=df, fit_reg=True, line_kws={\"color\":\"#F6FF33\"})\n",
+    "sns.regplot(x=\"price\", y=\"y\", data=df, fit_reg=True, line_kws={\"color\": \"#F6FF33\"})\n",
     "plt.title(\"Regression line on Price vs. y\")\n",
     "plt.show();"
    ]
@@ -543,7 +543,7 @@
     }
    ],
    "source": [
-    "sns.regplot(x=\"price\", y=\"depth\", data=df, fit_reg=True, line_kws={\"color\":\"#F6FF33\"})\n",
+    "sns.regplot(x=\"price\", y=\"depth\", data=df, fit_reg=True, line_kws={\"color\": \"#F6FF33\"})\n",
     "plt.title(\"Regression line on Price vs. Depth\")\n",
     "plt.show();"
    ]
@@ -573,7 +573,7 @@
     }
    ],
    "source": [
-    "df_objs = (df.dtypes == \"object\")\n",
+    "df_objs = df.dtypes == \"object\"\n",
     "object_col = list(df_objs[df_objs].index)\n",
     "object_col"
    ]
@@ -724,7 +724,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(12,8), dpi=100)\n",
+    "plt.figure(figsize=(12, 8), dpi=100)\n",
     "sns.violinplot(x=\"cut\", y=\"price\", data=df, palette=\"viridis\", scale=\"count\")\n",
     "plt.title(\"Violinplot for Cut vs. Price\")\n",
     "plt.xlabel(\"Price\")\n",
@@ -749,7 +749,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(12,8), dpi=100)\n",
+    "plt.figure(figsize=(12, 8), dpi=100)\n",
     "sns.violinplot(x=\"color\", y=\"price\", data=df, palette=\"viridis\", scale=\"count\")\n",
     "plt.title(\"Violinplot for Color vs. Price\")\n",
     "plt.xlabel(\"Price\")\n",
@@ -774,7 +774,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(12,8), dpi=100)\n",
+    "plt.figure(figsize=(12, 8), dpi=100)\n",
     "sns.violinplot(x=\"clarity\", y=\"price\", data=df, palette=\"viridis\", scale=\"count\")\n",
     "plt.title(\"Violinplot for Clarity vs. Price\")\n",
     "plt.xlabel(\"Price\")\n",
@@ -795,8 +795,8 @@
     "for col in object_col:\n",
     "    label_data[col] = le.fit_transform(label_data[col])\n",
     "\n",
-    "#export encoder for later use\n",
-    "output = open('model_encoder.pkl', 'wb')\n",
+    "# export encoder for later use\n",
+    "output = open(\"model_encoder.pkl\", \"wb\")\n",
     "pickle.dump(le, output)\n",
     "output.close()"
    ]
@@ -917,7 +917,7 @@
     }
    ],
    "source": [
-    "label_data[[\"cut\",\"clarity\", \"color\"]].head(10)"
+    "label_data[[\"cut\", \"clarity\", \"color\"]].head(10)"
    ]
   },
   {
@@ -1091,7 +1091,7 @@
     "cor_color = sns.diverging_palette(50, 275, s=80, l=55, n=9, as_cmap=True)\n",
     "corr_data = label_data.corr()\n",
     "\n",
-    "fig, axs = plt.subplots(figsize=(12,12))\n",
+    "fig, axs = plt.subplots(figsize=(12, 12))\n",
     "sns.heatmap(data=corr_data, cmap=cor_color, annot=True)\n",
     "plt.show();"
    ]
@@ -1342,7 +1342,7 @@
    ],
    "source": [
     "# 2.depth, cut, table removed\n",
-    "data_removed = label_data.drop(label_data[[\"depth\",\"cut\",\"table\"]], axis=1)\n",
+    "data_removed = label_data.drop(label_data[[\"depth\", \"cut\", \"table\"]], axis=1)\n",
     "data_removed.head()"
    ]
   },
@@ -1370,7 +1370,9 @@
    "source": [
     "X = data_preserved.drop([\"price\"], axis=1)\n",
     "y = data_preserved[\"price\"]\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.3, random_state=101\n",
+    ")"
    ]
   },
   {
@@ -1379,13 +1381,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline_linreg = Pipeline([('scaler1', StandardScaler()), ('lr_classifier', LinearRegression())])\n",
-    "pipeline_dtree = Pipeline([('scaler2', StandardScaler()), ('dt_classifier', DecisionTreeRegressor())])\n",
-    "pipeline_ranfor = Pipeline([('scaler3', StandardScaler()), ('rf_classifier', RandomForestRegressor())])\n",
-    "pipeline_knn = Pipeline([('scaler4', StandardScaler()), ('knn_classifier', KNeighborsRegressor())])\n",
-    "pipeline_xgb = Pipeline([('scaler5', StandardScaler()), ('xgb_classifier', XGBRegressor())])\n",
-    "pipelines = [pipeline_linreg, pipeline_dtree, pipeline_ranfor, pipeline_knn, pipeline_xgb]\n",
-    "pipe = {0:\"LinearRegression\", 1:\"DecisionTree\", 2:\"RandomForest\", 3:\"KNeighbors\", 4:\"XGBoost\"}\n",
+    "pipeline_linreg = Pipeline(\n",
+    "    [(\"scaler1\", StandardScaler()), (\"lr_classifier\", LinearRegression())]\n",
+    ")\n",
+    "pipeline_dtree = Pipeline(\n",
+    "    [(\"scaler2\", StandardScaler()), (\"dt_classifier\", DecisionTreeRegressor())]\n",
+    ")\n",
+    "pipeline_ranfor = Pipeline(\n",
+    "    [(\"scaler3\", StandardScaler()), (\"rf_classifier\", RandomForestRegressor())]\n",
+    ")\n",
+    "pipeline_knn = Pipeline(\n",
+    "    [(\"scaler4\", StandardScaler()), (\"knn_classifier\", KNeighborsRegressor())]\n",
+    ")\n",
+    "pipeline_xgb = Pipeline(\n",
+    "    [(\"scaler5\", StandardScaler()), (\"xgb_classifier\", XGBRegressor())]\n",
+    ")\n",
+    "pipelines = [\n",
+    "    pipeline_linreg,\n",
+    "    pipeline_dtree,\n",
+    "    pipeline_ranfor,\n",
+    "    pipeline_knn,\n",
+    "    pipeline_xgb,\n",
+    "]\n",
+    "pipe = {\n",
+    "    0: \"LinearRegression\",\n",
+    "    1: \"DecisionTree\",\n",
+    "    2: \"RandomForest\",\n",
+    "    3: \"KNeighbors\",\n",
+    "    4: \"XGBoost\",\n",
+    "}\n",
     "\n",
     "for val in pipelines:\n",
     "    val.fit(X_train, y_train)"
@@ -1411,7 +1435,9 @@
    "source": [
     "cv_results = []\n",
     "for i, model in enumerate(pipelines):\n",
-    "    cv_score = cross_val_score(model, X_train, y_train, scoring=\"neg_root_mean_squared_error\", cv=10)\n",
+    "    cv_score = cross_val_score(\n",
+    "        model, X_train, y_train, scoring=\"neg_root_mean_squared_error\", cv=10\n",
+    "    )\n",
     "    cv_results.append(cv_score)\n",
     "    print(f\"{pipe[i]}: {np.abs(cv_score.mean())}\")"
    ]
@@ -1476,7 +1502,9 @@
    "source": [
     "X = data_removed.drop([\"price\"], axis=1)\n",
     "y = data_removed[\"price\"]\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)"
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.3, random_state=101\n",
+    ")"
    ]
   },
   {
@@ -1485,13 +1513,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pipeline_linreg2 = Pipeline([('scaler1', StandardScaler()), ('lr_classifier', LinearRegression())])\n",
-    "pipeline_dtree2 = Pipeline([('scaler2', StandardScaler()), ('dt_classifier', DecisionTreeRegressor())])\n",
-    "pipeline_ranfor2 = Pipeline([('scaler3', StandardScaler()), ('rf_classifier', RandomForestRegressor())])\n",
-    "pipeline_knn2 = Pipeline([('scaler4', StandardScaler()), ('knn_classifier', KNeighborsRegressor())])\n",
-    "pipeline_xgb2 = Pipeline([('scaler5', StandardScaler()), ('xgb_classifier', XGBRegressor())])\n",
-    "pipelines2 = [pipeline_linreg2, pipeline_dtree2, pipeline_ranfor2, pipeline_knn2, pipeline_xgb2]\n",
-    "pipe2 = {0:\"LinearRegression\", 1:\"DecisionTree\", 2:\"RandomForest\", 3:\"KNeighbors\", 4:\"XGBoost\"}\n",
+    "pipeline_linreg2 = Pipeline(\n",
+    "    [(\"scaler1\", StandardScaler()), (\"lr_classifier\", LinearRegression())]\n",
+    ")\n",
+    "pipeline_dtree2 = Pipeline(\n",
+    "    [(\"scaler2\", StandardScaler()), (\"dt_classifier\", DecisionTreeRegressor())]\n",
+    ")\n",
+    "pipeline_ranfor2 = Pipeline(\n",
+    "    [(\"scaler3\", StandardScaler()), (\"rf_classifier\", RandomForestRegressor())]\n",
+    ")\n",
+    "pipeline_knn2 = Pipeline(\n",
+    "    [(\"scaler4\", StandardScaler()), (\"knn_classifier\", KNeighborsRegressor())]\n",
+    ")\n",
+    "pipeline_xgb2 = Pipeline(\n",
+    "    [(\"scaler5\", StandardScaler()), (\"xgb_classifier\", XGBRegressor())]\n",
+    ")\n",
+    "pipelines2 = [\n",
+    "    pipeline_linreg2,\n",
+    "    pipeline_dtree2,\n",
+    "    pipeline_ranfor2,\n",
+    "    pipeline_knn2,\n",
+    "    pipeline_xgb2,\n",
+    "]\n",
+    "pipe2 = {\n",
+    "    0: \"LinearRegression\",\n",
+    "    1: \"DecisionTree\",\n",
+    "    2: \"RandomForest\",\n",
+    "    3: \"KNeighbors\",\n",
+    "    4: \"XGBoost\",\n",
+    "}\n",
     "\n",
     "for val in pipelines2:\n",
     "    val.fit(X_train, y_train)"
@@ -1517,7 +1567,9 @@
    "source": [
     "cv_results2 = []\n",
     "for i, model in enumerate(pipelines2):\n",
-    "    cv_score = cross_val_score(model, X_train, y_train, scoring=\"neg_root_mean_squared_error\", cv=10)\n",
+    "    cv_score = cross_val_score(\n",
+    "        model, X_train, y_train, scoring=\"neg_root_mean_squared_error\", cv=10\n",
+    "    )\n",
     "    cv_results.append(cv_score)\n",
     "    print(f\"{pipe2[i]}: {np.abs(cv_score.mean())}\")"
    ]
