--- a/level-based-segments/development.ipynb
+++ b/level-based-segments/development.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/persona.csv')"
+    "df = pd.read_csv(\"data/persona.csv\")"
    ]
   },
   {
@@ -186,7 +186,7 @@
     }
    ],
    "source": [
-    "df.groupby('SOURCE')[\"PRICE\"].mean()"
+    "df.groupby(\"SOURCE\")[\"PRICE\"].mean()"
    ]
   },
   {
@@ -285,7 +285,7 @@
     }
    ],
    "source": [
-    "df.groupby('COUNTRY')[\"PRICE\"].sum()"
+    "df.groupby(\"COUNTRY\")[\"PRICE\"].sum()"
    ]
   },
   {
@@ -312,7 +312,7 @@
     }
    ],
    "source": [
-    "df.groupby('COUNTRY')[\"PRICE\"].mean()"
+    "df.groupby(\"COUNTRY\")[\"PRICE\"].mean()"
    ]
   },
   {
@@ -345,7 +345,7 @@
     }
    ],
    "source": [
-    "df.groupby(['COUNTRY', 'SOURCE'])[\"PRICE\"].mean()"
+    "df.groupby([\"COUNTRY\", \"SOURCE\"])[\"PRICE\"].mean()"
    ]
   },
   {
@@ -377,7 +377,7 @@
     }
    ],
    "source": [
-    "df.groupby(['COUNTRY', 'SOURCE', 'SEX', 'AGE'])[\"PRICE\"].mean()"
+    "df.groupby([\"COUNTRY\", \"SOURCE\", \"SEX\", \"AGE\"])[\"PRICE\"].mean()"
    ]
   },
   {
@@ -481,9 +481,11 @@
     }
    ],
    "source": [
-    "agg_df = df.groupby(\n",
-    "    ['COUNTRY', 'SOURCE', 'SEX', 'AGE'])[\"PRICE\"].mean().sort_values(\n",
-    "    ascending=False)\n",
+    "agg_df = (\n",
+    "    df.groupby([\"COUNTRY\", \"SOURCE\", \"SEX\", \"AGE\"])[\"PRICE\"]\n",
+    "    .mean()\n",
+    "    .sort_values(ascending=False)\n",
+    ")\n",
     "agg_df = agg_df.reset_index()\n",
     "agg_df.head()"
    ]
@@ -595,9 +597,11 @@
     }
    ],
    "source": [
-    "agg_df['AGE_CAT'] = pd.cut(x=agg_df['AGE'], bins=[0, 18, 23, 30, 40, 66, 100],\n",
-    "                           labels=[\"0_18\", \"19_23\", \"24_30\", \"31_40\", \"41_66\",\n",
-    "                                   \"67_100\"])\n",
+    "agg_df[\"AGE_CAT\"] = pd.cut(\n",
+    "    x=agg_df[\"AGE\"],\n",
+    "    bins=[0, 18, 23, 30, 40, 66, 100],\n",
+    "    labels=[\"0_18\", \"19_23\", \"24_30\", \"31_40\", \"41_66\", \"67_100\"],\n",
+    ")\n",
     "agg_df.head()"
    ]
   },
@@ -684,13 +688,15 @@
     }
    ],
    "source": [
-    "agg_df['customers_level_based'] = agg_df[\n",
-    "    ['COUNTRY', 'SOURCE', 'SEX', 'AGE_CAT']].apply(\n",
-    "    lambda x: x.str.upper()).agg(\n",
-    "    \"_\".join, axis=1)\n",
-    "agg_df = agg_df.groupby(\n",
-    "    'customers_level_based')[\"PRICE\"].mean().reset_index()  # to remove duplicates\n",
-    "agg_df.sort_values('PRICE', ascending=False, inplace=True)\n",
+    "agg_df[\"customers_level_based\"] = (\n",
+    "    agg_df[[\"COUNTRY\", \"SOURCE\", \"SEX\", \"AGE_CAT\"]]\n",
+    "    .apply(lambda x: x.str.upper())\n",
+    "    .agg(\"_\".join, axis=1)\n",
+    ")\n",
+    "agg_df = (\n",
+    "    agg_df.groupby(\"customers_level_based\")[\"PRICE\"].mean().reset_index()\n",
+    ")  # to remove duplicates\n",
+    "agg_df.sort_values(\"PRICE\", ascending=False, inplace=True)\n",
     "agg_df.reset_index(inplace=True, drop=True)\n",
     "agg_df.head()"
    ]
@@ -850,7 +856,7 @@
     }
    ],
    "source": [
-    "agg_df['SEGMENT'] = pd.qcut(agg_df.PRICE, 4, labels=['D', 'C', 'B', 'A'])\n",
+    "agg_df[\"SEGMENT\"] = pd.qcut(agg_df.PRICE, 4, labels=[\"D\", \"C\", \"B\", \"A\"])\n",
     "agg_df.head()"
    ]
   },
@@ -968,7 +974,9 @@
     }
    ],
    "source": [
-    "agg_df.drop(\"customers_level_based\", axis=1).groupby('SEGMENT').agg(['mean', 'max', 'sum'])"
+    "agg_df.drop(\"customers_level_based\", axis=1).groupby(\"SEGMENT\").agg(\n",
+    "    [\"mean\", \"max\", \"sum\"]\n",
+    ")"
    ]
   },
   {
@@ -1034,7 +1042,7 @@
     }
    ],
    "source": [
-    "agg_df[agg_df.SEGMENT == 'C'].describe().T"
+    "agg_df[agg_df.SEGMENT == \"C\"].describe().T"
    ]
   },
   {
@@ -1096,10 +1104,10 @@
     }
    ],
    "source": [
-    "user1 = 'TUR_ANDROID_FEMALE_31_40'\n",
-    "user2 = 'FRA_IOS_FEMALE_31_40'\n",
-    "agg_df[agg_df.customers_level_based == user1][['PRICE', 'SEGMENT']]\n",
-    "agg_df[agg_df.customers_level_based == user2][['PRICE', 'SEGMENT']]"
+    "user1 = \"TUR_ANDROID_FEMALE_31_40\"\n",
+    "user2 = \"FRA_IOS_FEMALE_31_40\"\n",
+    "agg_df[agg_df.customers_level_based == user1][[\"PRICE\", \"SEGMENT\"]]\n",
+    "agg_df[agg_df.customers_level_based == user2][[\"PRICE\", \"SEGMENT\"]]"
    ]
   }
  ],
