--- a/project-euler/part-two.ipynb
+++ b/project-euler/part-two.ipynb
@@ -58,22 +58,40 @@
     "import math\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "def grids():\n",
-    "    \n",
-    "    num = \"08 02 22 97 38 15 00 40 00 75 04 05 07 78 52 12 50 77 91 08 49 49 99 40 17 81 18 57 60 87 17 40 98 43 69 48 04 56 62 00 81 49 31 73 55 79 14 29 93 71 40 67 53 88 30 03 49 13 36 65 52 70 95 23 04 60 11 42 69 24 68 56 01 32 56 71 37 02 36 91 22 31 16 71 51 67 63 89 41 92 36 54 22 40 40 28 66 33 13 80 24 47 32 60 99 03 45 02 44 75 33 53 78 36 84 20 35 17 12 50 32 98 81 28 64 23 67 10 26 38 40 67 59 54 70 66 18 38 64 70 67 26 20 68 02 62 12 20 95 63 94 39 63 08 40 91 66 49 94 21 24 55 58 05 66 73 99 26 97 17 78 78 96 83 14 88 34 89 63 72 21 36 23 09 75 00 76 44 20 45 35 14 00 61 33 97 34 31 33 95 78 17 53 28 22 75 31 67 15 94 03 80 04 62 16 14 09 53 56 92 16 39 05 42 96 35 31 47 55 58 88 24 00 17 54 24 36 29 85 57 86 56 00 48 35 71 89 07 05 44 44 37 44 60 21 58 51 54 17 58 19 80 81 68 05 94 47 69 28 73 92 13 86 52 17 77 04 89 55 40 04 52 08 83 97 35 99 16 07 97 57 32 16 26 26 79 33 27 98 66 88 36 68 87 57 62 20 72 03 46 33 67 46 55 12 32 63 93 53 69 04 42 16 73 38 25 39 11 24 94 72 18 08 46 29 32 40 62 76 36 20 69 36 41 72 30 23 88 34 62 99 69 82 67 59 85 74 04 36 16 20 73 35 29 78 31 90 01 74 31 49 71 48 86 81 16 23 57 05 54 01 70 54 71 83 51 54 69 16 92 33 48 61 43 52 01 89 19 67 48\"    \n",
+    "\n",
+    "    num = \"08 02 22 97 38 15 00 40 00 75 04 05 07 78 52 12 50 77 91 08 49 49 99 40 17 81 18 57 60 87 17 40 98 43 69 48 04 56 62 00 81 49 31 73 55 79 14 29 93 71 40 67 53 88 30 03 49 13 36 65 52 70 95 23 04 60 11 42 69 24 68 56 01 32 56 71 37 02 36 91 22 31 16 71 51 67 63 89 41 92 36 54 22 40 40 28 66 33 13 80 24 47 32 60 99 03 45 02 44 75 33 53 78 36 84 20 35 17 12 50 32 98 81 28 64 23 67 10 26 38 40 67 59 54 70 66 18 38 64 70 67 26 20 68 02 62 12 20 95 63 94 39 63 08 40 91 66 49 94 21 24 55 58 05 66 73 99 26 97 17 78 78 96 83 14 88 34 89 63 72 21 36 23 09 75 00 76 44 20 45 35 14 00 61 33 97 34 31 33 95 78 17 53 28 22 75 31 67 15 94 03 80 04 62 16 14 09 53 56 92 16 39 05 42 96 35 31 47 55 58 88 24 00 17 54 24 36 29 85 57 86 56 00 48 35 71 89 07 05 44 44 37 44 60 21 58 51 54 17 58 19 80 81 68 05 94 47 69 28 73 92 13 86 52 17 77 04 89 55 40 04 52 08 83 97 35 99 16 07 97 57 32 16 26 26 79 33 27 98 66 88 36 68 87 57 62 20 72 03 46 33 67 46 55 12 32 63 93 53 69 04 42 16 73 38 25 39 11 24 94 72 18 08 46 29 32 40 62 76 36 20 69 36 41 72 30 23 88 34 62 99 69 82 67 59 85 74 04 36 16 20 73 35 29 78 31 90 01 74 31 49 71 48 86 81 16 23 57 05 54 01 70 54 71 83 51 54 69 16 92 33 48 61 43 52 01 89 19 67 48\"\n",
     "    a = num.split(\" \")\n",
     "    b = [int(val) for val in a]\n",
     "    chunk_size = 20\n",
-    "    grid = [b[i:i+chunk_size] for i in range(0,len(b),20)]\n",
-    "     \n",
-    "    horizontal_max = max(grid[i][j]*grid[i][j+1]*grid[i][j+2]*grid[i][j+3] for i in range(20) for j in range(17))\n",
-    "    vertical_max = max(grid[i][j]*grid[i+1][j]*grid[i+2][j]*grid[i+3][j] for i in range(17) for j in range(20))\n",
-    "    diagonal1_max = max(grid[i][j]*grid[i+1][j+1]*grid[i+2][j+2]*grid[i+3][j+3] for i in range(17) for j in range(17))\n",
-    "    diagonal2_max = max(grid[i][j]*grid[i-1][j+1]*grid[i-2][j+2]*grid[i-3][j+3] for i in range(3,20) for j in range(17))\n",
+    "    grid = [b[i : i + chunk_size] for i in range(0, len(b), 20)]\n",
+    "\n",
+    "    horizontal_max = max(\n",
+    "        grid[i][j] * grid[i][j + 1] * grid[i][j + 2] * grid[i][j + 3]\n",
+    "        for i in range(20)\n",
+    "        for j in range(17)\n",
+    "    )\n",
+    "    vertical_max = max(\n",
+    "        grid[i][j] * grid[i + 1][j] * grid[i + 2][j] * grid[i + 3][j]\n",
+    "        for i in range(17)\n",
+    "        for j in range(20)\n",
+    "    )\n",
+    "    diagonal1_max = max(\n",
+    "        grid[i][j] * grid[i + 1][j + 1] * grid[i + 2][j + 2] * grid[i + 3][j + 3]\n",
+    "        for i in range(17)\n",
+    "        for j in range(17)\n",
+    "    )\n",
+    "    diagonal2_max = max(\n",
+    "        grid[i][j] * grid[i - 1][j + 1] * grid[i - 2][j + 2] * grid[i - 3][j + 3]\n",
+    "        for i in range(3, 20)\n",
+    "        for j in range(17)\n",
+    "    )\n",
     "\n",
     "    max_max = max(horizontal_max, vertical_max, diagonal1_max, diagonal2_max)\n",
     "\n",
     "    return max_max\n",
+    "\n",
     "\n",
     "grid_again()"
    ]
@@ -123,15 +141,18 @@
     "import math\n",
     "import sympy\n",
     "\n",
+    "\n",
     "def triangular_number(n):\n",
     "    \"\"\"Returns nth triangular number\"\"\"\n",
-    "    return int(n*(n+1)/2)\n",
+    "    return int(n * (n + 1) / 2)\n",
+    "\n",
     "\n",
     "def divisor(num):\n",
     "    \"\"\"Returns the lenght of a list of all divisors of given triangular number\"\"\"\n",
     "    return sympy.divisors(num)\n",
-    "    \n",
-    "for i in range(1,1000000):\n",
+    "\n",
+    "\n",
+    "for i in range(1, 1000000):\n",
     "    if len(divisor(triangular_number(i))) > 500:\n",
     "        print(triangular_number(i))\n",
     "        break"
@@ -176,8 +197,12 @@
     "array = [int(a) for a in str(number)]\n",
     "f.close()\n",
     "chunk_size = 50\n",
-    "chunks = [array[i:i+chunk_size] for i in range(0,len(array),50) if len(array[i:i+chunk_size]) == 50]\n",
-    "big_numbers = [int(''.join(map(str,i))) for i in chunks]\n",
+    "chunks = [\n",
+    "    array[i : i + chunk_size]\n",
+    "    for i in range(0, len(array), 50)\n",
+    "    if len(array[i : i + chunk_size]) == 50\n",
+    "]\n",
+    "big_numbers = [int(\"\".join(map(str, i))) for i in chunks]\n",
     "totals = sum(big_numbers)\n",
     "\n",
     "print(str(totals)[:10])"
@@ -225,6 +250,7 @@
    "source": [
     "from IPython.display import clear_output\n",
     "\n",
+    "\n",
     "def collatz(n):\n",
     "    count = 0\n",
     "    while True:\n",
@@ -234,20 +260,21 @@
     "            n /= 2\n",
     "            count += 1\n",
     "        else:\n",
-    "            n = (n*3)+1\n",
+    "            n = (n * 3) + 1\n",
     "            count += 1\n",
-    "            \n",
+    "\n",
     "    return count\n",
+    "\n",
     "\n",
     "def longest_chain():\n",
     "\n",
-    "    chain = [collatz(n) for n in range(1,1000000)]\n",
-    "    a = chain.index(max(chain))   \n",
-    "    nums = [i for i in range(1,1000000)]\n",
-    "    \n",
-    "    return max(chain),nums[a]\n",
+    "    chain = [collatz(n) for n in range(1, 1000000)]\n",
+    "    a = chain.index(max(chain))\n",
+    "    nums = [i for i in range(1, 1000000)]\n",
     "\n",
-    "    \n",
+    "    return max(chain), nums[a]\n",
+    "\n",
+    "\n",
     "longest_chain()"
    ]
   },
@@ -292,12 +319,14 @@
    "source": [
     "import math\n",
     "\n",
-    "def pascal_row(n):\n",
-    "    return int((math.factorial(2*(n)))/((math.factorial(n))*(math.factorial(n))))\n",
     "\n",
-    "answer = [pascal_row(i) for i in range(2,21)]\n",
+    "def pascal_row(n):\n",
+    "    return int((math.factorial(2 * (n))) / ((math.factorial(n)) * (math.factorial(n))))\n",
+    "\n",
+    "\n",
+    "answer = [pascal_row(i) for i in range(2, 21)]\n",
     "print(answer)\n",
-    "#137846528820"
+    "# 137846528820"
    ]
   },
   {
@@ -333,14 +362,16 @@
    "source": [
     "import math\n",
     "\n",
+    "\n",
     "def power_digit_sum(n):\n",
-    "    \n",
+    "\n",
     "    num = 2**n\n",
     "    chars = [val for val in str(num)]\n",
     "    sums = 0\n",
     "    for i in chars:\n",
     "        sums += int(i)\n",
     "    return sums\n",
+    "\n",
     "\n",
     "power_digit_sum(1000)"
    ]
@@ -380,12 +411,14 @@
    ],
    "source": [
     "import math\n",
-    "from num2words import num2words \n",
+    "from num2words import num2words\n",
+    "\n",
     "\n",
     "def letter_count():\n",
-    "    \n",
-    "    a = [len(num2words(i).replace(\" \",\"\").replace(\"-\", \"\")) for i in range(1,1001)]\n",
+    "\n",
+    "    a = [len(num2words(i).replace(\" \", \"\").replace(\"-\", \"\")) for i in range(1, 1001)]\n",
     "    return sum(a)\n",
+    "\n",
     "\n",
     "letter_count()"
    ]
